--- a/index.html
+++ b/index.html
@@ -323,9 +323,10 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a PhD candidate in Anthropology in the School of Human Evolution and Social Change at Arizona State University. I use computer simulations to answer questions at the intersection of anthropology and climate science. In particular, I study the feedbacks between climate change and cultural change over the past 10,000 years. <img src="/img/ses.png" alt="" /></p>
+<p><img align="right" src="img/ses.png">
+I am a PhD candidate in Anthropology in the School of Human Evolution and Social Change at Arizona State University. I use computer simulations to answer questions at the intersection of anthropology and climate science. In particular, I study the feedbacks between climate change and cultural change over the past 10,000 years.</p>
 
-<p><a href="/files/cv.pdf">Download my CV</a>or scroll down for more information.</p>
+<p><a href="/files/cv.pdf">Download my CV</a> or scroll down for more information.</p>
 
 
     <div class="row">
@@ -842,6 +843,10 @@ summary(cars) ## speed dist ## Min. : 4.0 Min. : 2.00 ## 1st Qu.:12.0 1st Qu.: 2
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.youtube.com/watch?v=-cWOVlC5-KA">
+  Video
+</a>
 
 
 
