--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 <p><img align="right" src="img/ses.png">
 I am a PhD candidate in Anthropology in the School of Human Evolution and Social Change at Arizona State University. I use computer simulations to answer questions at the intersection of anthropology and climate science. In particular, I study the feedbacks between climate change and cultural change over the past 10,000 years.</p>
 
-<p><a href="/files/cv.pdf">Download my CV</a> or scroll down for more information.</p>
+<p><a href="/files/pdf/cv.pdf">Download my CV</a> or scroll down for more information.</p>
 
 
     <div class="row">
