--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="PhD Candidate in Anthropology">
+  <meta name="description" content="Postdoctoral Research Scientist">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -75,7 +75,7 @@
   <meta property="og:site_name" content="Nicolas Gauthier">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Nicolas Gauthier">
-  <meta property="og:description" content="PhD Candidate in Anthropology">
+  <meta property="og:description" content="Postdoctoral Research Scientist">
   <meta property="og:locale" content="en-us">
   
   
