--- a/publication_types/3/index.html
+++ b/publication_types/3/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Postdoctoral Research Scientist">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication_types/3/">
+  <link rel="alternate" hreflang="en-us" href="https://nick-gauthier.github.io/publication_types/3/">
 
   
 
@@ -59,15 +59,15 @@
   
 
   
-  <link rel="alternate" href="/publication_types/3/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
-  <link rel="feed" href="/publication_types/3/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="alternate" href="https://nick-gauthier.github.io/publication_types/3/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="feed" href="https://nick-gauthier.github.io/publication_types/3/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication_types/3/">
+  <link rel="canonical" href="https://nick-gauthier.github.io/publication_types/3/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -75,7 +75,7 @@
   <meta property="twitter:creator" content="@nick_gaut">
   
   <meta property="og:site_name" content="Nicolas Gauthier">
-  <meta property="og:url" content="/publication_types/3/">
+  <meta property="og:url" content="https://nick-gauthier.github.io/publication_types/3/">
   <meta property="og:title" content="3 | Nicolas Gauthier">
   <meta property="og:description" content="Postdoctoral Research Scientist">
   <meta property="og:locale" content="en-us">
@@ -251,7 +251,7 @@
   
   
   <div>
-    <h2><a href="/publication/southwest-networks/">Hydroclimate variability influenced social interaction in the prehistoric American Southwest</a></h2>
+    <h2><a href="https://nick-gauthier.github.io/publication/southwest-networks/">Hydroclimate variability influenced social interaction in the prehistoric American Southwest</a></h2>
     <div class="article-style">
       
     </div>
