fix slide links

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting.pdf">
   Slides
 </a>
 
@@ -1021,7 +1021,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/caa-2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017">
   Slides
 </a>
 
