--- a/project/north-africa/index.html
+++ b/project/north-africa/index.html
@@ -400,7 +400,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting.pdf">
   Slides
 </a>
 
