--- a/project/spatial-interaction/index.html
+++ b/project/spatial-interaction/index.html
@@ -360,7 +360,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/caa-2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017">
   Slides
 </a>
 
