--- a/talk/caa-2017/index.html
+++ b/talk/caa-2017/index.html
@@ -374,7 +374,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/posters/caa-2017">
+<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/slides/CAA_2017">
   Slides
 </a>
 
