--- a/talk/index.html
+++ b/talk/index.html
@@ -393,7 +393,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting.pdf">
   Slides
 </a>
 
@@ -480,7 +480,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/caa-2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017">
   Slides
 </a>
 
