--- a/talk/sdwg/index.html
+++ b/talk/sdwg/index.html
@@ -373,7 +373,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting">
+<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting.pdf">
   Slides
 </a>
 
