even more pdf link fixes

--- a/project/gam-networks/index.html
+++ b/project/gam-networks/index.html
@@ -415,7 +415,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b.pdf">
   PDF
 </a>
 
