--- a/project/north-africa/index.html
+++ b/project/north-africa/index.html
@@ -363,7 +363,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018.pdf">
   PDF
 </a>
 
