--- a/talk/index.html
+++ b/talk/index.html
@@ -267,7 +267,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b.pdf">
   PDF
 </a>
 
@@ -320,7 +320,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019a">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019a.pdf">
   PDF
 </a>
 
@@ -354,7 +354,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018.pdf">
   PDF
 </a>
 
@@ -480,7 +480,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017.pdf">
   Slides
 </a>
 
@@ -517,7 +517,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017.pdf">
   PDF
 </a>
 
