--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b.pdf">
   PDF
 </a>
 
@@ -834,7 +834,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019a">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019a.pdf">
   PDF
 </a>
 
@@ -868,7 +868,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018.pdf">
   PDF
 </a>
 
@@ -982,7 +982,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017.pdf">
   PDF
 </a>
 
@@ -1021,7 +1021,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017.pdf">
   Slides
 </a>
 
