--- a/project/southwest/index.html
+++ b/project/southwest/index.html
@@ -415,7 +415,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017.pdf">
   PDF
 </a>
 
