--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/southwest_networks.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/southwest_networks.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -486,7 +486,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/risk_resilience.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/risk_resilience.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -525,7 +525,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/aegean.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/aegean.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -792,7 +792,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019b.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/posters/SAA_2019b.pdf">
   PDF
 </a>
 
@@ -834,7 +834,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2019a.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/posters/SAA_2019a.pdf">
   PDF
 </a>
 
@@ -868,7 +868,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2018.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/posters/SAA_2018.pdf">
   PDF
 </a>
 
@@ -907,7 +907,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/NCAR_SDWG_Meeting.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/slides/NCAR_SDWG_Meeting.pdf">
   Slides
 </a>
 
@@ -982,7 +982,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/posters/SAA_2017.pdf">
   PDF
 </a>
 
@@ -1021,7 +1021,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/slides/CAA_2017.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/slides/CAA_2017.pdf">
   Slides
 </a>
 
