--- a/project/southwest/index.html
+++ b/project/southwest/index.html
@@ -355,7 +355,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/southwest_networks.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/southwest_networks.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -415,7 +415,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/posters/SAA_2017.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/posters/SAA_2017.pdf">
   PDF
 </a>
 
