--- a/publication/index.html
+++ b/publication/index.html
@@ -312,7 +312,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/southwest_networks.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/southwest_networks.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -365,7 +365,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/risk_resilience.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/risk_resilience.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -410,7 +410,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/pdf/aegean.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://nick-gauthier.github.io/files/pdf/aegean.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
