--- a/publication/farming-spread-aegean/index.html
+++ b/publication/farming-spread-aegean/index.html
@@ -374,7 +374,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/pdf/aegean.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/files/pdf/aegean.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
