--- a/talk/saa-2018/index.html
+++ b/talk/saa-2018/index.html
@@ -373,7 +373,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/posters/SAA_2018.pdf">
+<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/files/posters/SAA_2018.pdf">
   PDF
 </a>
 
