add north africa preprint

--- a/404.html
+++ b/404.html
@@ -249,6 +249,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="https://nick-gauthier.github.io/publication/roman-abm/">Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://nick-gauthier.github.io/publication/southwest-networks/">Hydroclimate variability influenced social interaction in the prehistoric American Southwest</a></li>
   </ul>
   
