--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ I am a geoarchaeologist and anthropologist who uses methods and tools from the g
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     <strong>Nicolas Gauthier</strong></span>.
-  <a href="https://nick-gauthier.github.io/publication/roman-abm/" itemprop="name">Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa</a>.
+  <a href="https://nick-gauthier.github.io/publication/roman-abm/" itemprop="name">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</a>.
   In <em>SocArXiv</em>,
   2019.
   <p>
