--- a/publication/roman-abm/index.html
+++ b/publication/roman-abm/index.html
@@ -78,7 +78,7 @@
   
   <meta property="og:site_name" content="Nicolas Gauthier">
   <meta property="og:url" content="https://nick-gauthier.github.io/publication/roman-abm/">
-  <meta property="og:title" content="Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa | Nicolas Gauthier">
+  <meta property="og:title" content="Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa | Nicolas Gauthier">
   <meta property="og:description" content="Feedbacks between population growth, food production, and the environment were central to the growth and decay of ancient agrarian societies. Population growth increases both the number of mouths a society must feed and the number of people working to feed them. The balance between these two forces depends on the population&#39;s age structure. Although age structure ultimately reflects individual fertility and mortality, it is households that make decisions about the production and consumption of food, and their decisions depend on interactions with all other households in a settlement. How do these organizational levels interact to influence population growth and regulation? Here, I present a multi-level agent-based model of demography, food production, and social interaction in agricultural societies. I use the model to simulate the interactions of individuals, households, and settlements in a food-limited environment, and investigate the resulting patterns of population growth. Using Roman North Africa as a motivating example, I illustrate how abstract properties like &#39;carrying capacity&#39; emerge from the concrete actions and interactions of millions of individual people. Looking forward, bottom-up simulations rooted in first principles of human behavior will be crucial for understanding the coevolution of preindustrial societies and their natural environments."><meta property="og:image" content="https://nick-gauthier.github.io/img/eq_pop.png">
   <meta property="og:locale" content="en-us">
   
@@ -90,7 +90,7 @@
   
   
 
-  <title>Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa | Nicolas Gauthier</title>
+  <title>Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa | Nicolas Gauthier</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -257,7 +257,7 @@
 
 
   <div class="article-container">
-    <h1 itemprop="name">Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa</h1>
+    <h1 itemprop="name">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</h1>
     <span class="pub-authors" itemprop="author">
       
       <strong>Nicolas Gauthier</strong>
@@ -269,7 +269,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Multilevel%20simulation%20of%20semography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa&amp;url=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f"
+         href="https://twitter.com/intent/tweet?text=Multilevel%20simulation%20of%20demography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa&amp;url=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -283,21 +283,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f&amp;title=Multilevel%20simulation%20of%20semography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f&amp;title=Multilevel%20simulation%20of%20demography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f&amp;title=Multilevel%20simulation%20of%20semography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f&amp;title=Multilevel%20simulation%20of%20demography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Multilevel%20simulation%20of%20semography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa&amp;body=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f">
+         href="mailto:?subject=Multilevel%20simulation%20of%20demography%20and%20food%20production%20in%20ancient%20agrarian%20societies%3a%20A%20case%20study%20from%20Roman%20North%20Africa&amp;body=https%3a%2f%2fnick-gauthier.github.io%2fpublication%2froman-abm%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
