--- a/404.html
+++ b/404.html
@@ -249,7 +249,7 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/publication/roman-abm/">Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa</a></li>
+    <li><a href="https://nick-gauthier.github.io/publication/roman-abm/">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</a></li>
   </ul>
   
   <ul>
