--- a/publication/index.html
+++ b/publication/index.html
@@ -303,7 +303,7 @@
           
             <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
-  <a href="https://nick-gauthier.github.io/publication/roman-abm/" itemprop="name">Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa</a>
+  <a href="https://nick-gauthier.github.io/publication/roman-abm/" itemprop="name">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</a>
   <div itemprop="author">
     <strong>Nicolas Gauthier</strong></div>
   <p>
