--- a/publication_types/3/index.html
+++ b/publication_types/3/index.html
@@ -251,7 +251,7 @@
   
   
   <div>
-    <h2><a href="https://nick-gauthier.github.io/publication/roman-abm/">Multilevel simulation of semography and food production in ancient agrarian societies: A case study from Roman North Africa</a></h2>
+    <h2><a href="https://nick-gauthier.github.io/publication/roman-abm/">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</a></h2>
     <div class="article-style">
       
     </div>
