upload archaeoglobe paper

--- a/404.html
+++ b/404.html
@@ -57,8 +57,8 @@
   
 
   
-  <link rel="alternate" href="https://nick-gauthier.github.io/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
-  <link rel="feed" href="https://nick-gauthier.github.io/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -249,19 +249,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/publication/roman-abm/">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</a></li>
+    <li><a href="/publication/archaeoglobe/">Archaeological assessment reveals Earth’s early transformation through land use</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/publication/southwest-networks/">Hydroclimate variability influenced social interaction in the prehistoric American Southwest</a></li>
+    <li><a href="/publication/roman-abm/">Multilevel simulation of demography and food production in ancient agrarian societies: A case study from Roman North Africa</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/publication/risk-resilience/">Risk and resilience in the late glacial: A case study from the western Mediterranean</a></li>
+    <li><a href="/publication/southwest-networks/">Hydroclimate variability influenced social interaction in the prehistoric American Southwest</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/publication/farming-spread-aegean/">The spatial pattern of climate change during the spread of farming into the Aegean</a></li>
+    <li><a href="/publication/risk-resilience/">Risk and resilience in the late glacial: A case study from the western Mediterranean</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/farming-spread-aegean/">The spatial pattern of climate change during the spread of farming into the Aegean</a></li>
   </ul>
   
   
@@ -271,23 +275,23 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/talk/saa-2019b/">Generalized Additive Mixed Models for Spatial Networks</a></li>
+    <li><a href="/talk/saa-2019b/">Generalized Additive Mixed Models for Spatial Networks</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/talk/saa-2019a/">The frailty-mortality paradox: Insights from the Spanish flu pandemic of 1918</a></li>
+    <li><a href="/talk/saa-2019a/">The frailty-mortality paradox: Insights from the Spanish flu pandemic of 1918</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/talk/saa-2018/">Agricultural Niche Construction in Roman North Africa</a></li>
+    <li><a href="/talk/saa-2018/">Agricultural Niche Construction in Roman North Africa</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/talk/sdwg/">Agent-based modeling of past anthropogenic land-cover change: A case study from Roman North Africa</a></li>
+    <li><a href="/talk/sdwg/">Agent-based modeling of past anthropogenic land-cover change: A case study from Roman North Africa</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/talk/comses/">Placing people in the environment: Coupling agent-based land-use and Earth system models</a></li>
+    <li><a href="/talk/comses/">Placing people in the environment: Coupling agent-based land-use and Earth system models</a></li>
   </ul>
   
   
@@ -297,23 +301,23 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/project/north-africa/">Agricultural Niche Construction in Roman North Africa</a></li>
+    <li><a href="/project/north-africa/">Agricultural Niche Construction in Roman North Africa</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/project/archaeoglobe/">ArchaeoGLOBE</a></li>
+    <li><a href="/project/archaeoglobe/">ArchaeoGLOBE</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/project/southwest/">Drought Variability and Social Interaction in the American Southwest</a></li>
+    <li><a href="/project/southwest/">Drought Variability and Social Interaction in the American Southwest</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/project/spatial-interaction/">Dynamic Spatial Interaction Modeling</a></li>
+    <li><a href="/project/spatial-interaction/">Dynamic Spatial Interaction Modeling</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://nick-gauthier.github.io/project/gam-networks/">Generalized Additive Models for Spatial Networks</a></li>
+    <li><a href="/project/gam-networks/">Generalized Additive Models for Spatial Networks</a></li>
   </ul>
   
   
