--- a/project/medland/index.html
+++ b/project/medland/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://nick-gauthier.github.io/project/medland/">
+  <link rel="alternate" hreflang="en-us" href="/project/medland/">
 
   
 
@@ -61,15 +61,15 @@
   
 
   
-  <link rel="alternate" href="https://nick-gauthier.github.io/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
-  <link rel="feed" href="https://nick-gauthier.github.io/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://nick-gauthier.github.io/project/medland/">
+  <link rel="canonical" href="/project/medland/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -77,7 +77,7 @@
   <meta property="twitter:creator" content="@nick_gaut">
   
   <meta property="og:site_name" content="Nicolas Gauthier">
-  <meta property="og:url" content="https://nick-gauthier.github.io/project/medland/">
+  <meta property="og:url" content="/project/medland/">
   <meta property="og:title" content="Mediterranean Landscape Dynamics | Nicolas Gauthier">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -259,35 +259,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Mediterranean%20Landscape%20Dynamics&amp;url=https%3a%2f%2fnick-gauthier.github.io%2fproject%2fmedland%2f"
+         href="https://twitter.com/intent/tweet?text=Mediterranean%20Landscape%20Dynamics&amp;url=%2fproject%2fmedland%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fnick-gauthier.github.io%2fproject%2fmedland%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fproject%2fmedland%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnick-gauthier.github.io%2fproject%2fmedland%2f&amp;title=Mediterranean%20Landscape%20Dynamics"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fproject%2fmedland%2f&amp;title=Mediterranean%20Landscape%20Dynamics"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnick-gauthier.github.io%2fproject%2fmedland%2f&amp;title=Mediterranean%20Landscape%20Dynamics"
+         href="http://service.weibo.com/share/share.php?url=%2fproject%2fmedland%2f&amp;title=Mediterranean%20Landscape%20Dynamics"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Mediterranean%20Landscape%20Dynamics&amp;body=https%3a%2f%2fnick-gauthier.github.io%2fproject%2fmedland%2f">
+         href="mailto:?subject=Mediterranean%20Landscape%20Dynamics&amp;body=%2fproject%2fmedland%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -311,9 +311,9 @@
 
 <div class="article-tags">
   
-  <a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/tags/land-use/">land-use</a>
+  <a class="btn btn-primary btn-outline" href="/tags/land-use/">land-use</a>
   
-  <a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/tags/agent-based-model/">agent-based-model</a>
+  <a class="btn btn-primary btn-outline" href="/tags/agent-based-model/">agent-based-model</a>
   
 </div>
 
