--- a/publication/archaeoglobe/index.html
+++ b/publication/archaeoglobe/index.html
@@ -374,6 +374,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="/files/pdf/Stephens-et-al-2019-10.1126-science.aax1192.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 
