--- a/talk/comses/index.html
+++ b/talk/comses/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Earth system models (ESMs) are climate models capable of simulating land-atmosphere feedbacks and the complex biogeochemical and biogeophysical processes that drive them. These models are particularly well-suited to studying the impact of preindustrial land use on regional climate change, as they explicitly resolve the impacts of irrigation, deforestation, and agropastoral production on the flow of water and energy between the land and atmosphere. Generating realistic maps of past land use is a difficult task, so researchers often rely on static, coarse-resolution estimates derived from present-day conditions. In this talk, I present agent-based modeling as an alternative method to generate dynamic land-use maps that continuously contribute to and adapt to environmental variability. I show how processes that would otherwise require ad-hoc submodules in a standalone ABM (e.g. precipitation, crop yield, and soil fertility) can instead be directly simulated using physically consistent and previously validated representations in an ESM. After reviewing the conceptual and computational principles underlying modern ESMs, I demonstrate how they can be readily coupled to ABMs that adhere to a few simple design rules, and illustrate the utility of this approach with a case study from Roman North Africa.">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://nick-gauthier.github.io/talk/comses/">
+  <link rel="alternate" hreflang="en-us" href="/talk/comses/">
 
   
 
@@ -61,15 +61,15 @@
   
 
   
-  <link rel="alternate" href="https://nick-gauthier.github.io/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
-  <link rel="feed" href="https://nick-gauthier.github.io/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Nicolas Gauthier">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://nick-gauthier.github.io/talk/comses/">
+  <link rel="canonical" href="/talk/comses/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -77,7 +77,7 @@
   <meta property="twitter:creator" content="@nick_gaut">
   
   <meta property="og:site_name" content="Nicolas Gauthier">
-  <meta property="og:url" content="https://nick-gauthier.github.io/talk/comses/">
+  <meta property="og:url" content="/talk/comses/">
   <meta property="og:title" content="Placing people in the environment: Coupling agent-based land-use and Earth system models | Nicolas Gauthier">
   <meta property="og:description" content="Earth system models (ESMs) are climate models capable of simulating land-atmosphere feedbacks and the complex biogeochemical and biogeophysical processes that drive them. These models are particularly well-suited to studying the impact of preindustrial land use on regional climate change, as they explicitly resolve the impacts of irrigation, deforestation, and agropastoral production on the flow of water and energy between the land and atmosphere. Generating realistic maps of past land use is a difficult task, so researchers often rely on static, coarse-resolution estimates derived from present-day conditions. In this talk, I present agent-based modeling as an alternative method to generate dynamic land-use maps that continuously contribute to and adapt to environmental variability. I show how processes that would otherwise require ad-hoc submodules in a standalone ABM (e.g. precipitation, crop yield, and soil fertility) can instead be directly simulated using physically consistent and previously validated representations in an ESM. After reviewing the conceptual and computational principles underlying modern ESMs, I demonstrate how they can be readily coupled to ABMs that adhere to a few simple design rules, and illustrate the utility of this approach with a case study from Roman North Africa.">
   <meta property="og:locale" content="en-us">
@@ -260,35 +260,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models&amp;url=https%3a%2f%2fnick-gauthier.github.io%2ftalk%2fcomses%2f"
+         href="https://twitter.com/intent/tweet?text=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models&amp;url=%2ftalk%2fcomses%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fnick-gauthier.github.io%2ftalk%2fcomses%2f"
+         href="https://www.facebook.com/sharer.php?u=%2ftalk%2fcomses%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnick-gauthier.github.io%2ftalk%2fcomses%2f&amp;title=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fcomses%2f&amp;title=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnick-gauthier.github.io%2ftalk%2fcomses%2f&amp;title=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models"
+         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fcomses%2f&amp;title=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models&amp;body=https%3a%2f%2fnick-gauthier.github.io%2ftalk%2fcomses%2f">
+         href="mailto:?subject=Placing%20people%20in%20the%20environment%3a%20Coupling%20agent-based%20land-use%20and%20Earth%20system%20models&amp;body=%2ftalk%2fcomses%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -360,7 +360,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://nick-gauthier.github.io/project/north-africa/">
+<a class="btn btn-primary btn-outline" href="/project/north-africa/">
   Project
 </a>
 
