add risk perception pdf

--- a/publication/index.html
+++ b/publication/index.html
@@ -814,8 +814,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/pdf/Gauthier_RiskPerception.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
