--- a/index.html
+++ b/index.html
@@ -1434,8 +1434,14 @@ I am an anthropologist and Earth systems geographer who uses methods and tools f
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/pdf/Gauthier_RiskPerception.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
