--- a/project/agricultural-spread/index.html
+++ b/project/agricultural-spread/index.html
@@ -771,8 +771,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/pdf/Gauthier_RiskPerception.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
