--- a/publication/risk-perception/index.html
+++ b/publication/risk-perception/index.html
@@ -543,8 +543,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/pdf/Gauthier_RiskPerception.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
