--- a/project/gam-networks/index.html
+++ b/project/gam-networks/index.html
@@ -765,14 +765,6 @@
 
 
 
-  
-  
-    
-  
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/preprints/socarxiv/shp68" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 
 
@@ -817,6 +809,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://youtube.com/watch?v=GyTmu1s28d0&amp;t=941s" target="_blank" rel="noopener">
+  Video
+</a>
 
 
 
