new formspree link

--- a/index.html
+++ b/index.html
@@ -2427,7 +2427,7 @@ I am an anthropologist and Earth systems geographer who uses methods and tools f
     
 
     <div class="mb-3">
-      <form name="contact" method="POST" action="https://formspree.io/ngauthier@arizona.edu">
+      <form name="contact" method="POST" action="https://formspree.io/f/xjvpzvrl">
         <div class="form-group form-inline">
           <label class="sr-only" for="inputName">Name</label>
           <input type="text" name="name" class="form-control w-100" id="inputName" placeholder="Name" required>
