--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -449,6 +449,13 @@
     </div>
   </div>
   
+  <div>
+    <h2><a href="/publication_types/0/">0</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
 
   
 
